# axum-chat

./: .gitignore  CHANGELOG_CURRENT.md  CLAUDE.md  Cargo.toml  DEVELOPER_NOTES.md  Dockerfile  FINAL_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MCP_INTEGRATION.md  README.md  SECURITY_MIGRATION.md  VALIDATION_RULES.md  justfile  mcp.json  mcp.json.example  provider_response.html
.claude/: settings.local.json
.sqlx/: query-27ac2555cd55ba79cd83b9e039cf5c4d9512997ae1fbf0b0ed842b91dd1cc231.json  query-2f9807b76ea460c87376ee336f8997d2069c65a0b3f6584c552979001fb87b66.json  query-53373d1c61c00c05d24d8c9cccd53fa113c638b613c21f36a1a29721a8014625.json  query-5aef1f26606c200c2ad76e975c041e40e13afd1b214fbc7fdfe24ad71ad3133d.json  query-83141376614a8b2bbdebaeb036e1a6f2e3a6a9653e83713ba9fbfe971852ee1d.json  query-a9e68bb44b78760a2862217cf8e6e4a1f000bd12e319551eb4201fd4474ff0ef.json  query-c2f2983dc30377dbc342643c47f1200102fa718b67c8e58fd0327be3d2c9192e.json  query-c8f4ef4090fbfe0583c68d9dd3c7863a02e8e32bd7658a6c0f86058bb3b1ff7e.json  query-d6e9902fd46bb2d7682dd2ba88213e32646372ed8829d317870a5ce25b320d5c.json
config/: agents.example.json  providers.example.json
db/migrations/: 002_update_providers_schema.sql  003_add_local_agent_support.sql  004_add_models_endpoint.sql  007_add_tool_call_confirmations.sql  20241122000001_providers_agents.sql  20241123000001_add_allow_tools.sql  20241203000001_add_password_security.sql  20241211000001_add_syntax_theme_settings.sql  20241212000001_use_uuid_for_providers_agents.sql  20241212000002_populate_uuids.sql  20241216000001_extend_settings.sql  20251217001406_extend_message_data.sql  20251217001500_update_chat_view.sql
docs/: PROVIDERS_AGENTS.md
scripts/: import_configs.sh
src/: main.rs  middleware.rs
src/acp/: agent.rs  client.rs  mod.rs  server.rs  transport.rs  types.rs
src/ai/: stream.rs
src/data/: libsql_database.rs  mod.rs  model.rs  repository.rs
src/local_agents/: agent.rs  communication.rs  manager.rs  mod.rs
src/mcp/: client.rs  config.rs  constants.rs  enhanced.rs  manager.rs  mod.rs  models.rs  modern.rs  practical.rs  security.rs  service.rs  simple.rs  simplified.rs  tools.rs
src/utils/: markdown.rs  mod.rs  syntax.rs
templates/components/: agent-provider-picker.html  feature-card.html  footer.html  (+6 more)
(+33 files in other folders)
