[package]
name = "rustgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.29"
hyper = "1.8"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "migrate", "derive"] }
time = "0.3.36"
tera = "1.20"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
markdown = "1"
regex = "1.12.2"
html-escape = "0.2.13"

[profile.release]
opt-level = 3
lto = true
rpath = false
incremental = false
overflow-checks = false
strip = "symbols"
